<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_green_light"
    tools:context=".activities.StartActivity">

    <TextView
        android:id="@+id/game_title"
        android:layout_width="167dp"
        android:layout_height="60dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="#ff0000"
        android:textSize="36dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.195" />

    <LinearLayout
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="395dp"
        android:layout_height="242dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="440dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/game_title">

        <Button
            android:id="@+id/button_new_game"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingBottom="25dp"
            android:textSize="24dp"
            android:text="@string/new_game"
            tools:layout_editor_absoluteX="71dp"
            tools:layout_editor_absoluteY="455dp"/>

        <Button
            android:id="@+id/button_continue_game"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingBottom="25dp"
            android:text="@string/continue_game"
            android:textSize="24dp"
            tools:layout_editor_absoluteX="248dp"
            tools:layout_editor_absoluteY="455dp"/>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>